@@ -1,5 +1,6 @@
 class SiteController < ApplicationController
-
+  helper :profile
+  
   skip_before_filter :launch_required
 
   def boom
