@@ -14,6 +14,7 @@ ul.menu            {}
   
 table.bordered        { border-collapse:collapse; }
   table.bordered tr   {}
+  table.bordered tr.header td { text-align:center;font-weight:bold;background-color:#eee; }
     table.bordered th { border:1px solid #999;padding:0.25em 1em;background-color:#eee; }
     table.bordered td { border:1px solid #999;padding:0.25em 1em; }
 
